rebar3_appup_plugin version 2.4

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 %% -*- erlang -*-
-{plugins, [rebar3_appup_plugin]}.
+% {plugins, [rebar3_appup_plugin]}.
+{plugins, [{rebar3_appup_plugin, "~> 2.4"}]}.
 
 {provider_hooks, [{post, [{compile, {appup, compile}},
                           {clean, {appup, clean}}]}
