--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %% -*- erlang -*-
 % {plugins, [rebar3_appup_plugin]}.
-{plugins, [{rebar3_appup_plugin, "~> 2.4"}]}.
+{plugins, [{rebar3_appup_plugin, "2.4.8"}]}.
 
 {provider_hooks, [{post, [{compile, {appup, compile}},
                           {clean, {appup, clean}}]}
